<resources>
    <string name="app_name">XPScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Pane details -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_scan">Scan Products</string>
    <string name="menu_manage">Manage Products</string>
    <string name="menu_expired">Expired Products</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="nav_header1">Add Product</string>

    <!-- Dashboard strings -->
    <string name="dashboard_products">Products</string>
    <string name="dashboard_expired">Expired</string>
    <string name="dashboard_categories">Categories</string>
    <string name="dashboard_scan">Scanned</string>
    <string name="dashboard_greetings">Hi Russel Jade Welcome To XPScanner</string>

    <!-- Buttons -->
    <string name="save_product">Save Product</string>

    <!-- Android Hint strings -->
    <string name="product_barcode">Barcode</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_description">Product Description</string>
    <string name="product_expiration">Product Expiration</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="notification_title">Expired Product!</string>
    <string name="no_products_found">No products found</string>
    <string name="product_id">Product ID</string>
    <string name="sign_in">Sign In</string>
    <string name="please_login_to_your_account">Please login to your account</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="or">OR</string>
        <string name="sign_in_with_google">Sign In with Google</string>
        <string name="don_t_have_an_account">Don\'t have an account?</string>
        <string name="sign_up">Sign Up</string>
        <string name="already_verified_your_email">Already verified your email?</string>
        <string name="verify_email">Verify Email</string>
        <string name="checkEmail">Please check the link we have sent to your email</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete_product">Delete Product</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default notification action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>