<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/sidebar_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/sidebar_scanproducts"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/sidebar_manageproducts"
            android:title="@string/menu_manage" />
        <item
            android:id="@+id/nav_expired"
            android:icon="@drawable/sidebar_expiredproducts"
            android:title="@string/menu_expired" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sidebar_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/sidebar_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>




