<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.xpscanner.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.example.xpscanner.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.example.xpscanner.ui.manage.ManageFragment"
        android:label="@string/menu_manage"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/nav_expired"
        android:name="com.example.xpscanner.ui.expired.ExpiredFragment"
        android:label="@string/menu_expired"
        tools:layout="@layout/fragment_expired" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.xpscanner.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>