<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    app:cardElevation="2dp"
    app:cardCornerRadius="2dp"
    android:layout_margin="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardMaxElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/productIDTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productBarcodeTV"
            app:layout_constraintTop_toBottomOf="@+id/productDescriptionTV" />

        <TextView
            android:id="@+id/productExpirationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="21dp"
            android:text="@string/product_expiration"
            app:layout_constraintBottom_toTopOf="@+id/productNameTV"
            app:layout_constraintStart_toEndOf="@+id/productImageIV"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/productDescriptionTV"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_description"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@+id/productImageIV"
            app:layout_constraintTop_toBottomOf="@+id/productNameTV" />

        <TextView
            android:id="@+id/productBarcodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/product_barcode"
            app:layout_constraintStart_toEndOf="@+id/productImageIV"
            app:layout_constraintTop_toBottomOf="@+id/productNameTV" />

        <TextView
            android:id="@+id/productCategoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/product_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/productImageIV"
            android:layout_width="115dp"
            android:layout_height="103dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/productNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/product_name"
            style="@style/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/productImageIV"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>