<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        tools:context=".Register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textStyle="bold"
            style="@style/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create a new account"
            android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/username"
        style="@style/android_hint"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/email"
        style="@style/android_hint"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_dark_blue5_15">

            <EditText
                android:id="@+id/passwordET"
                android:layout_toStartOf="@+id/passwordIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                style="@style/android_hint"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/password_hide" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue5_15">

        <EditText
            android:id="@+id/conpasswordET"
            android:layout_toStartOf="@+id/conpasswordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            style="@style/android_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/conpasswordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/password_hide" />

    </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_primary_15"
            android:textColor="@color/white"
            android:backgroundTint="@color/app_button"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"/>

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Sign In"
                android:textStyle="bold"
                android:textColor="@color/teal_200"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
